--- a/docs/机场推荐/机场推荐.md
+++ b/docs/机场推荐/机场推荐.md
@@ -116,3 +116,11 @@ permalink: /posts/vpn/
 邀请码：QpXdVaKY
 
 注册可免费使用5小时 1G流量，确定好用，再按需购买
+
+### 乐速
+
+官网地址：[乐速](https://www.luxd.uk/#/register?code=mquP7UE5)
+
+邀请码：mquP7UE5
+
+注册可免费使用1小时 5G流量，备选，按需购买
