--- a/docs/机场推荐/乐速.md
+++ b/docs/机场推荐/乐速.md
@@ -7,7 +7,7 @@ tags:
   - 机场
   - 推荐
 title: 机场推荐ssone-便宜稳定
-permalink: /posts/vpn/
+permalink: /posts/vpn4/
 ---
 乐速机场，最低价15元100G/月，性价比高，十分稳定，按流量购买可做备用机场适用
 
