--- a/docs/机场推荐/乐速.md
+++ b/docs/机场推荐/乐速.md
@@ -1,12 +1,12 @@
 ---
-createTime: 2025/08/31 01:00:00
+createTime: 2025/09/08 02:36:00
 sticky: 97
 tags:
   - 科学上网
   - VPN
   - 机场
   - 推荐
-title: 机场推荐ssone-便宜稳定
+title: 优质机场-乐速-方便快捷
 permalink: /posts/vpn4/
 ---
 乐速机场，最低价15元100G/月，性价比高，十分稳定，按流量购买可做备用机场适用
