--- a/docs/机场推荐/乐速.md
+++ b/docs/机场推荐/乐速.md
@@ -1,6 +1,6 @@
 ---
 createTime: 2025/09/08 02:36:00
-sticky: 97
+sticky: 98
 tags:
   - 科学上网
   - VPN
@@ -9,6 +9,12 @@ tags:
 title: 优质机场-乐速-方便快捷
 permalink: /posts/vpn4/
 ---
+
+乐速机场，价格实惠，流量灵活，速度快，稳定可靠，适合科学上网和VPN用户。
+
+<!-- more -->
+
+
 乐速机场，最低价15元100G/月，性价比高，十分稳定，按流量购买可做备用机场适用
 
 ## 乐速 官网地址
