--- a/docs/机场推荐/乐速.md
+++ b/docs/机场推荐/乐速.md
@@ -10,12 +10,12 @@ title: 优质机场-乐速-方便快捷
 permalink: /posts/vpn4/
 ---
 
-乐速机场，价格实惠，流量灵活，速度快，稳定可靠，适合科学上网和VPN用户。
+[乐速机场](https://www.luxd.uk/#/register?code=mquP7UE5)，价格实惠，流量灵活，速度快，稳定可靠，适合科学上网和VPN用户。
 
 <!-- more -->
 
 
-乐速机场，最低价15元100G/月，性价比高，十分稳定，按流量购买可做备用机场适用
+[乐速机场](https://www.luxd.uk/#/register?code=mquP7UE5)，最低价15元100G/月，性价比高，十分稳定，按流量购买可做备用机场适用
 
 ## 乐速 官网地址
 
@@ -33,3 +33,4 @@ permalink: /posts/vpn4/
 ## 自己的备用机场，可做二选方案，支持微信、支付宝、USDT
 
 
+[ssone官网](https://hello-ssone.com/register?aff=QpXdVaKY) 个人使用，稳定可靠
