--- a/docs/机场推荐/科学上网介绍.md
+++ b/docs/机场推荐/科学上网介绍.md
@@ -9,6 +9,11 @@ title: 科学上网、软路由、翻墙、机场、梯子介绍
 permalink: /posts/jieshao/
 
 ---
+
+科学上网、软路由、翻墙、机场、梯子介绍，助你了解突破网络限制的常用工具与方法。
+
+<!-- more -->
+
 # 科学上网、软路由、翻墙、机场、梯子介绍
 
 ## 一、科学上网
@@ -84,3 +89,6 @@ permalink: /posts/jieshao/
 - **机场**：提供现成服务，适合想要方便的人。  
 - **软路由**：功能全面，适合动手能力强、追求高性能网络的用户。  
 
+[ssone官网](https://hello-ssone.com/register?aff=QpXdVaKY) 个人使用，稳定可靠
+
+[乐速官网](https://www.luxd.uk/#/register?code=mquP7UE5) 备选机场，按流量购买，永久使用
