--- a/docs/机场推荐/简介.md
+++ b/docs/机场推荐/简介.md
@@ -9,7 +9,7 @@ title: 2025最新版 Clash 下载安装导入订阅链接
 permalink: /posts/vpn3/
 ---
 
-Clash Verge下载安装配置
+Clash最新版下载安装与订阅导入教程，适合科学上网、VPN用户快速配置稳定节点。
 
 <!-- more -->
 
@@ -41,3 +41,7 @@ Clash Verge下载安装配置
 
 - **一键导入订阅链接**：各大机场订阅网站均可
 - **手工导入订阅链接**：需要购买订阅链接
+
+[ssone官网](https://hello-ssone.com/register?aff=QpXdVaKY) 个人使用，稳定可靠
+
+[乐速官网](https://www.luxd.uk/#/register?code=mquP7UE5) 备选机场，按流量购买，永久使用
