--- a/docs/机场推荐/软路由介绍.md
+++ b/docs/机场推荐/软路由介绍.md
@@ -9,6 +9,10 @@ title: 软路由配置介绍
 permalink: /posts/ruanluyou/
 ---
 
+软路由配置教程，涵盖OpenWrt、爱快等系统，科学上网、广告过滤、VPN等功能详细介绍。
+
+<!-- more -->
+
 # 软路由配置介绍
 
 ## 一、什么是软路由？
@@ -27,7 +31,6 @@ permalink: /posts/ruanluyou/
 - **爱快（iKuai）**：中文界面，企业级路由方案，稳定好用  
 - **pfSense / OPNsense**：基于 FreeBSD，功能强大，适合企业或实验室  
 - **RouterOS (MikroTik)**：专业路由系统，学习成本高  
-
 ---
 
 ## 三、软路由基本配置步骤
@@ -60,3 +63,7 @@ permalink: /posts/ruanluyou/
 
 ```text
 光猫（桥接） → 软路由（WAN） → 交换机 → 无线路由（AP模式） → 各种终端设备
+```
+[ssone官网](https://hello-ssone.com/register?aff=QpXdVaKY) 个人使用，稳定可靠
+
+[乐速官网](https://www.luxd.uk/#/register?code=mquP7UE5) 备选机场，按流量购买，永久使用
