--- a/docs/机场推荐/翻墙可获得更多的资源.md
+++ b/docs/机场推荐/翻墙可获得更多的资源.md
@@ -9,6 +9,10 @@ title: 翻墙后的资源有哪些？
 permalink: /posts/vpntext/
 ---
 
+翻墙后可访问Google、YouTube、GitHub等全球资源，获取更多信息、学习资料和国际交流机会。
+
+<!-- more -->
+
 # 翻墙后的资源有哪些？
 
 翻墙（VPN、V2Ray、Clash、Trojan 等工具）后，最大的好处就是 **能接触到更多资源**，突破信息壁垒。以下是常见的几个方面：
@@ -68,3 +72,6 @@ permalink: /posts/vpntext/
 - 注意隐私与信息安全  
 - 了解并遵守相关法律政策  
 
+[ssone官网](https://hello-ssone.com/register?aff=QpXdVaKY) 个人使用，稳定可靠
+
+[乐速官网](https://www.luxd.uk/#/register?code=mquP7UE5) 备选机场，按流量购买，永久使用
