--- a/docs/机场推荐/乐速.md
+++ b/docs/机场推荐/乐速.md
@@ -6,7 +6,7 @@ tags:
   - VPN
   - 机场
   - 推荐
-title: 优质机场-乐速-方便快捷
+title: 乐速机场推荐：价格实惠流量灵活，稳定高速科学上网VPN节点
 permalink: /posts/vpn4/
 ---
 
@@ -17,7 +17,7 @@ permalink: /posts/vpn4/
 
 [乐速机场](https://www.luxd.uk/#/register?code=mquP7UE5)，最低价15元100G/月，性价比高，十分稳定，按流量购买可做备用机场适用
 
-## 乐速 官网地址
+## 乐速机场推荐：价格实惠流量灵活，稳定高速科学上网VPN节点
 
 [www.luxd.uk](https://www.luxd.uk/#/register?code=mquP7UE5)
 
@@ -33,4 +33,3 @@ permalink: /posts/vpn4/
 ## 自己的备用机场，可做二选方案，支持微信、支付宝、USDT
 
 
-[ssone官网](https://hello-ssone.com/register?aff=QpXdVaKY) 个人使用，稳定可靠
