--- a/docs/机场推荐/科学上网介绍.md
+++ b/docs/机场推荐/科学上网介绍.md
@@ -5,7 +5,7 @@ tags:
   - VPN
   - 机场
   - 推荐
-title: 科学上网、软路由、翻墙、机场、梯子介绍
+title: 科学上网、软路由、翻墙、机场、梯子全方位介绍与使用指南
 permalink: /posts/jieshao/
 
 ---
@@ -14,7 +14,7 @@ permalink: /posts/jieshao/
 
 <!-- more -->
 
-# 科学上网、软路由、翻墙、机场、梯子介绍
+# 科学上网、软路由、翻墙、机场、梯子全方位介绍与使用指南
 
 ## 一、科学上网
 - **定义**：通过一些技术手段突破网络限制，访问被屏蔽或限制的网站与服务。  
