--- a/docs/机场推荐/软路由介绍.md
+++ b/docs/机场推荐/软路由介绍.md
@@ -5,7 +5,7 @@ tags:
   - VPN
   - 机场
   - 推荐
-title: 软路由配置介绍
+title: 软路由配置教程：OpenWrt、爱快系统科学上网与VPN功能全解析
 permalink: /posts/ruanluyou/
 ---
 
@@ -13,7 +13,7 @@ permalink: /posts/ruanluyou/
 
 <!-- more -->
 
-# 软路由配置介绍
+# 软路由配置教程：OpenWrt、爱快系统科学上网与VPN功能全解析
 
 ## 一、什么是软路由？
 软路由（Software Router）是指通过一台普通电脑、低功耗主机或单板机（如 N5105 小主机、树莓派等），  
