--- a/docs/机场推荐/翻墙可获得更多的资源.md
+++ b/docs/机场推荐/翻墙可获得更多的资源.md
@@ -5,7 +5,7 @@ tags:
   - VPN
   - 机场
   - 推荐
-title: 翻墙后的资源有哪些？
+title: 翻墙后能获得哪些资源？Google、YouTube、GitHub等全球信息获取指南
 permalink: /posts/vpntext/
 ---
 
@@ -13,7 +13,7 @@ permalink: /posts/vpntext/
 
 <!-- more -->
 
-# 翻墙后的资源有哪些？
+# 翻墙后能获得哪些资源？Google、YouTube、GitHub等全球信息获取指南
 
 翻墙（VPN、V2Ray、Clash、Trojan 等工具）后，最大的好处就是 **能接触到更多资源**，突破信息壁垒。以下是常见的几个方面：
 
