--- a/docs/机场推荐/乐速.md
+++ b/docs/机场推荐/乐速.md
@@ -1,26 +1,23 @@
 ---
 createTime: 2025/09/08 02:36:00
-sticky: 96
 tags:
   - 科学上网
   - VPN
   - 机场
   - 推荐
 title: 乐速机场推荐：价格实惠流量灵活，稳定高速科学上网VPN节点
-permalink: /posts/vpn4/
+permalink: /posts/lesu/
 ---
 
 [乐速机场](https://www.luxd.uk/#/register?code=mquP7UE5)，价格实惠，流量灵活，速度快，稳定可靠，适合科学上网和VPN用户。
 
 <!-- more -->
 
-
 [乐速机场](https://www.luxd.uk/#/register?code=mquP7UE5)，最低价15元100G/月，性价比高，十分稳定，按流量购买可做备用机场适用
 
 ## 乐速机场推荐：价格实惠流量灵活，稳定高速科学上网VPN节点
 
 [www.luxd.uk](https://www.luxd.uk/#/register?code=mquP7UE5)
-
 
 |价格|流量|租用方式|
 |---|---|---|
@@ -31,5 +28,3 @@ permalink: /posts/vpn4/
 |28.88元永久|100G永久|永久，永久，永久，永久|
 
 ## 自己的备用机场，可做二选方案，支持微信、支付宝、USDT
-
-
