--- a/docs/机场推荐/功能简介.md
+++ b/docs/机场推荐/功能简介.md
@@ -6,13 +6,14 @@ tags:
   - 机场
   - 推荐
 title: 翻墙的利与弊详解：信息获取、学习交流与安全风险全面解析
-permalink: /posts/vpn1/
+permalink: /posts/pac/
 ---
 
 翻墙的利与弊详解，涵盖信息获取、学习交流、法律风险与安全隐患，助你科学上网理性选择。
 
 <!-- more -->
-# 翻墙的利与弊详解：信息获取、学习交流与安全风险全面解析
+
+## 翻墙的利与弊详解：信息获取、学习交流与安全风险全面解析
 
 ## 一、翻墙的好处（利）
 
