--- a/docs/机场推荐/科学上网介绍.md
+++ b/docs/机场推荐/科学上网介绍.md
@@ -14,9 +14,10 @@ permalink: /posts/jieshao/
 
 <!-- more -->
 
-# 科学上网、软路由、翻墙、机场、梯子全方位介绍与使用指南
+## 科学上网、软路由、翻墙、机场、梯子全方位介绍与使用指南
 
 ## 一、科学上网
+
 - **定义**：通过一些技术手段突破网络限制，访问被屏蔽或限制的网站与服务。  
 - **常见方式**：
   - VPN（虚拟专用网络）
@@ -29,6 +30,7 @@ permalink: /posts/jieshao/
 ---
 
 ## 二、翻墙
+
 - **定义**：俗称，指突破「网络防火墙」进入外网。  
 - **本质**：科学上网的通俗叫法。  
 - **特点**：
@@ -38,6 +40,7 @@ permalink: /posts/jieshao/
 ---
 
 ## 三、梯子
+
 - **定义**：俗称，指帮助用户“爬过墙”的工具。  
 - **形式**：
   - 软件（VPN 客户端、代理工具、Clash、Surge）  
@@ -47,6 +50,7 @@ permalink: /posts/jieshao/
 ---
 
 ## 四、机场
+
 - **定义**：提供科学上网服务的供应商，通常是付费订阅。  
 - **运作方式**：
   - 提供 V2Ray、Trojan、Shadowsocks 等节点  
@@ -61,6 +65,7 @@ permalink: /posts/jieshao/
 ---
 
 ## 五、软路由
+
 - **定义**：用小主机或 PC 安装路由系统（OpenWrt、爱快、pfSense 等），代替传统路由器。  
 - **在科学上网中的作用**：
   - 可以在软路由里配置 Clash、OpenClash、Passwall 等插件  
@@ -85,6 +90,7 @@ permalink: /posts/jieshao/
 ---
 
 ## 七、总结
+
 - **科学上网 / 翻墙 / 梯子**：概念上接近，都是绕过限制访问外网的手段。  
 - **机场**：提供现成服务，适合想要方便的人。  
 - **软路由**：功能全面，适合动手能力强、追求高性能网络的用户。  
