--- a/docs/机场推荐/软路由介绍.md
+++ b/docs/机场推荐/软路由介绍.md
@@ -13,13 +13,15 @@ permalink: /posts/ruanluyou/
 
 <!-- more -->
 
-# 软路由配置教程：OpenWrt、爱快系统科学上网与VPN功能全解析
+## 软路由配置教程：OpenWrt、爱快系统科学上网与VPN功能全解析
 
 ## 一、什么是软路由？
+
 软路由（Software Router）是指通过一台普通电脑、低功耗主机或单板机（如 N5105 小主机、树莓派等），  
 安装路由系统（如 OpenWrt、爱快、RouterOS、pfSense、OPNsense）来实现路由器的功能。  
 
 相比硬路由（传统路由器），软路由具有：
+
 - 硬件性能更强，可扩展性好  
 - 功能更丰富（科学上网、广告过滤、QoS、VLAN、NAS 等）  
 - 系统可定制，社区生态丰富  
@@ -27,30 +29,36 @@ permalink: /posts/ruanluyou/
 ---
 
 ## 二、常见的软路由系统
+
 - **OpenWrt**：开源路由系统，插件丰富，适合 DIY 用户  
 - **爱快（iKuai）**：中文界面，企业级路由方案，稳定好用  
 - **pfSense / OPNsense**：基于 FreeBSD，功能强大，适合企业或实验室  
 - **RouterOS (MikroTik)**：专业路由系统，学习成本高  
+
 ---
 
 ## 三、软路由基本配置步骤
 
 ### 1. 准备工作
+
 - 一台支持的主机（常见 N5105 / N100 / J1900 等平台）  
 - 至少两张网卡（WAN、LAN）  
 - 下载并写入对应路由系统的镜像  
 
 ### 2. 网络接口配置
+
 - **WAN 口**：连接上级运营商的光猫或宽带  
 - **LAN 口**：连接交换机或无线路由器（AP 模式）  
 - 分配 IP 地址，如 `LAN: 192.168.1.1`  
 
 ### 3. 基础服务
+
 - **DHCP 服务**：自动分配内网 IP  
 - **DNS 服务**：配置本地 DNS 解析，或接入 DoH/DoT  
 - **防火墙设置**：基本 NAT、防火墙策略  
 
 ### 4. 高级功能
+
 - **科学上网**：Clash / V2Ray / SSR / OpenClash 等插件  
 - **广告过滤**：AdGuard Home、SmartDNS  
 - **流控与 QoS**：带宽管理、限速策略  
@@ -64,6 +72,7 @@ permalink: /posts/ruanluyou/
 ```text
 光猫（桥接） → 软路由（WAN） → 交换机 → 无线路由（AP模式） → 各种终端设备
 ```
+
 [ssone官网](https://hello-ssone.com/register?aff=QpXdVaKY) 个人使用，稳定可靠
 
 [乐速官网](https://www.luxd.uk/#/register?code=mquP7UE5) 备选机场，按流量购买，永久使用
