--- a/docs/机场推荐/翻墙可获得更多的资源.md
+++ b/docs/机场推荐/翻墙可获得更多的资源.md
@@ -6,20 +6,21 @@ tags:
   - 机场
   - 推荐
 title: 翻墙后能获得哪些资源？Google、YouTube、GitHub等全球信息获取指南
-permalink: /posts/vpntext/
+permalink: /posts/vpnres/
 ---
 
 翻墙后可访问Google、YouTube、GitHub等全球资源，获取更多信息、学习资料和国际交流机会。
 
 <!-- more -->
 
-# 翻墙后能获得哪些资源？Google、YouTube、GitHub等全球信息获取指南
+## 翻墙后能获得哪些资源？Google、YouTube、GitHub等全球信息获取指南
 
 翻墙（VPN、V2Ray、Clash、Trojan 等工具）后，最大的好处就是 **能接触到更多资源**，突破信息壁垒。以下是常见的几个方面：
 
 ---
 
 ## 一、信息与新闻
+
 - **Google 新闻**：比国内平台更全面，涵盖全球视角  
 - **BBC / CNN / NHK**：获取国际主流媒体的报道  
 - **Reddit / Hacker News**：科技圈与互联网社区的第一手信息  
@@ -27,6 +28,7 @@ permalink: /posts/vpntext/
 ---
 
 ## 二、学习与学术
+
 - **Google Scholar**：国外学术论文搜索  
 - **arXiv**：最新的科研论文预印本  
 - **Coursera / edX / Udemy**：国际知名在线课程平台  
@@ -35,6 +37,7 @@ permalink: /posts/vpntext/
 ---
 
 ## 三、开发与技术
+
 - **GitHub**：全球最大的开源代码托管平台  
 - **Stack Overflow**：程序员问答社区  
 - **NPM / Docker Hub**：前端、后端开发的依赖与镜像库  
@@ -43,6 +46,7 @@ permalink: /posts/vpntext/
 ---
 
 ## 四、交流与社交
+
 - **Twitter (X)**：快速了解全球热点与舆论  
 - **Telegram / Discord**：热门社区与兴趣群组  
 - **Facebook / Instagram**：与海外朋友联系、获取不同文化内容  
@@ -50,6 +54,7 @@ permalink: /posts/vpntext/
 ---
 
 ## 五、影音娱乐
+
 - **YouTube**：全球最大的视频平台  
 - **Netflix / Disney+**：正版影视资源  
 - **Spotify / SoundCloud**：高质量音乐流媒体  
@@ -58,6 +63,7 @@ permalink: /posts/vpntext/
 ---
 
 ## 六、开阔眼界
+
 - 接触不同的文化与观点  
 - 学习多样化的思维方式  
 - 获取未经过滤的信息，更好地培养独立判断能力  
@@ -68,6 +74,7 @@ permalink: /posts/vpntext/
 
 翻墙后，资源的丰富度和多样性远超本地网络环境，涵盖了 **学习、科研、技术、娱乐、新闻、交流** 各个方面。  
 不过在享受这些便利的同时，也要注意：  
+
 - 合理安排时间，避免沉迷  
 - 注意隐私与信息安全  
 - 了解并遵守相关法律政策  
