--- a/docs/机场推荐/01机场推荐.md
+++ b/docs/机场推荐/01机场推荐.md
@@ -194,19 +194,19 @@ xxyun加速特性如下：
 
 | 套餐 | 价格 | 流量 | 购买地址 |
 | --- | --- | --- | --- |
-| 星耀VIP | ¥9.9/一个月 | 99GB/月 | [点击购买](https://99vpn.bar/#/register?code=qzpkbzHF) |
-| 铂金VIP | ¥19.9/一个月 | 199GB/月 | [点击购买](https://99vpn.bar/#/register?code=qzpkbzHF) |
-| 钻石VIP | ¥29.9/一个月 | 299GB/月 | [点击购买](https://99vpn.bar/#/register?code=qzpkbzHF) |
-| 皇冠SVIP | ¥99.99/一次性 | 666GB/不限时 | [点击购买](https://99vpn.bar/#/register?code=qzpkbzHF) |
-| 尊耀SVIP | ¥199.99/一次性 | 1399GB/不限时 | [点击购买](https://99vpn.bar/#/register?code=qzpkbzHF) |
+| 星耀VIP | ¥9.9/一个月 | 99GB/月 | [点击购买](https://99vpn.bar/#/register?code=Wls9E3cC) |
+| 铂金VIP | ¥19.9/一个月 | 199GB/月 | [点击购买](https://99vpn.bar/#/register?code=Wls9E3cC) |
+| 钻石VIP | ¥29.9/一个月 | 299GB/月 | [点击购买](https://99vpn.bar/#/register?code=Wls9E3cC) |
+| 皇冠SVIP | ¥99.99/一次性 | 666GB/不限时 | [点击购买](https://99vpn.bar/#/register?code=Wls9E3cC) |
+| 尊耀SVIP | ¥199.99/一次性 | 1399GB/不限时 | [点击购买](https://99vpn.bar/#/register?code=Wls9E3cC) |
 
 ---
 
 ### tntcloud
 
-官网地址：[https://99vpn.bar](https://99vpn.bar/#/register?code=Wls9E3cC)
+官网地址：[https://a04.tntvipaffb06.cc](https://a04.tntvipaffb06.cc/#/register?code=t9Xe2sMs)
 
-邀请码：Wls9E3cC
+邀请码：t9Xe2sMs
 
 最低 10元60g/月(季付)
 
