--- a/docs/机场推荐/功能简介.md
+++ b/docs/机场推荐/功能简介.md
@@ -67,6 +67,4 @@ permalink: /posts/pac/
 
 👉 建议：如果确实有需求，应选择正规、安全的服务，注意保护隐私和合规风险。
 
-[ssone官网](https://hello-ssone.com/register?aff=QpXdVaKY) 个人使用，稳定可靠
-
-[乐速官网](https://www.luxd.uk/#/register?code=mquP7UE5) 备选机场，按流量购买，永久使用
+[👉 立即访问机场合集](https://yp7.net/posts/vpnsum/)
