--- a/docs/机场推荐/科学上网介绍.md
+++ b/docs/机场推荐/科学上网介绍.md
@@ -95,6 +95,4 @@ permalink: /posts/jieshao/
 - **机场**：提供现成服务，适合想要方便的人。  
 - **软路由**：功能全面，适合动手能力强、追求高性能网络的用户。  
 
-[ssone官网](https://hello-ssone.com/register?aff=QpXdVaKY) 个人使用，稳定可靠
-
-[乐速官网](https://www.luxd.uk/#/register?code=mquP7UE5) 备选机场，按流量购买，永久使用
+[👉 立即访问机场合集](https://yp7.net/posts/vpnsum/)
