--- a/docs/机场推荐/软路由介绍.md
+++ b/docs/机场推荐/软路由介绍.md
@@ -73,6 +73,4 @@ permalink: /posts/ruanluyou/
 光猫（桥接） → 软路由（WAN） → 交换机 → 无线路由（AP模式） → 各种终端设备
 ```
 
-[ssone官网](https://hello-ssone.com/register?aff=QpXdVaKY) 个人使用，稳定可靠
-
-[乐速官网](https://www.luxd.uk/#/register?code=mquP7UE5) 备选机场，按流量购买，永久使用
+[👉 立即访问机场合集](https://yp7.net/posts/vpnsum/)
