--- a/docs/机场推荐/翻墙可获得更多的资源.md
+++ b/docs/机场推荐/翻墙可获得更多的资源.md
@@ -79,6 +79,4 @@ permalink: /posts/vpnres/
 - 注意隐私与信息安全  
 - 了解并遵守相关法律政策  
 
-[ssone官网](https://hello-ssone.com/register?aff=QpXdVaKY) 个人使用，稳定可靠
-
-[乐速官网](https://www.luxd.uk/#/register?code=mquP7UE5) 备选机场，按流量购买，永久使用
+[👉 立即访问机场合集](https://yp7.net/posts/vpnsum/)
