--- a/docs/神秘空间.md
+++ b/docs/神秘空间.md
@@ -6,7 +6,7 @@ tags:
   - 机场
   - 推荐
 title: 科学上网原理与合规使用：2025 年 VPN、Shadowsocks、V2Ray 实战指南
-permalink: /posts/ruanluyou/
+permalink: /posts/maininfo/
 ---
 
 科学上网教程：虚拟专用网络与代理配置详解安全合规实用指南更新
