添加光年梯

--- a/docs/机场推荐/01机场推荐.md
+++ b/docs/机场推荐/01机场推荐.md
@@ -92,10 +92,9 @@ permalink: /posts/vpnsum/
 |机场名称|地址|试用|最便宜订阅|按流量购买|
 |---|---|---|--|---|
 |[ssone](#ssone)|[[https://hello-ssone.com](https://hello-ssone.com/register?aff=QpXdVaKY)| 1天 1G |10元 60G/月|❌不支持|
-|[乐速](#乐速)|[https://www.luxd.uk](https://www.luxd.uk/#/register?code=mquP7UE5)| 1小时 5G |15元 100G/月|28.88元100G/不限时|
+|[光年梯](#光年梯)|[[https://www02.lightyearti.cc](https://www02.lightyearti.cc/#/?code=ZWhMOU3y)| ❌不支持 |18元 110G/月|❌不支持|
 |[xxyun](#xxyun)|[https://xxyun.de](https://cloud.xxvip.shop/register?code=3AYVsSKY)| ❌不支持 |8.8元 100G/月|59.9元500G/不限时|
 |[cocoduck](#cocoduck)|[https://cocoduck.live](https://cocoduck.live/auth/register?code=ca0cfb89fa)| 1天 2G |15元 150G/月|❌不支持|
-|[小牛云](#小牛云)|[https://www.xiaoniuyun.cc](https://www.xiaoniuyun.cc/register/cn?code=1qpIO8wb)| ❌不支持 |2.99元 5G/天|47.6元50G高速/不限时|
 |[99吧](#99吧)|[https://99vpn.bar](https://99vpn.bar/#/register?code=Wls9E3cC)| 1天 1G |9.9元 99G/月|29.9元111G/不限时|
 |[TNTCloud](#tntcloud)|[https://a04.tntvipaffb06.cc](https://a04.tntvipaffb06.cc/#/register?code=t9Xe2sMs)| ❌不支持 |10元 60G/月（季付）|❌不支持|
 
@@ -113,15 +112,15 @@ permalink: /posts/vpnsum/
 
 注册可免费使用5小时 1G流量，确定好用，再按需购买
 
----
 
-### 乐速
-
-官网地址：[乐速](https://www.luxd.uk/#/register?code=mquP7UE5)
-
-邀请码：mquP7UE5
-
-注册可免费使用1小时 5G流量，备选，按需购买
+| 套餐 | 价格 | 流量 | 购买地址 |
+| --- | --- | --- | --- |
+| [Pro]优惠计划 | ¥80/三个月 | 300GB/月 | [点击购买](https://my.ssonestop.com/checkout?id=1) |
+| [Lite]微型够用 | ¥10/一个月 | 60GB/月 | [点击购买](https://my.ssonestop.com/checkout?id=9) |
+| [Pro]实用主义 | ¥39/一个月 | 500GB/月 | [点击购买](https://my.ssonestop.com/checkout?id=2) |
+| [Pro]充盈之选 | ¥60/一个月 | 1200GB/月 | [点击购买](https://my.ssonestop.com/checkout?id=3) |
+| [Pro]团队计划 | ¥150/一个月 | 5000GB/月 | [点击购买](https://my.ssonestop.com/checkout?id=4) |
+| [Pro]超值无忧 | ¥200/一年 | 5000GB/年 | [点击购买](https://my.ssonestop.com/checkout?id=6) |
 
 ---
 
@@ -161,24 +160,6 @@ xxyun加速特性如下：
 
 ---
 
-### 小牛云
-
-官网地址：[https://www.xiaoniuyun.cc/](https://www.xiaoniuyun.cc/register/cn?code=1qpIO8wb)
-
-邀请码：1qpIO8wb
-
-小牛云于2024年正式上线，依托母公司小牛VPN近5年的行业经验，拥有深厚的技术积淀和良好的品牌信誉，用户无需担心跑路风险。
-
-#### 核心优势
-
-- 采用国内知名科技企业专线接入，确保网络品质
-- 拥有庞大的节点资源池，提供超过100个高质量节点
-- 采用独享落地服务器架构，避免节点资源过度共享
-- 支持多种代理协议选择，满足不同用户需求
-- 提供充足的带宽保障，日常维持2Gbps容量，高峰期可达5Gbps
-- 凭借母品牌多年运营积累的技术实力和用户口碑，小牛云为用户提供稳定可靠的网络加速服务。
-
----
 
 ### 99吧
 
@@ -215,3 +196,23 @@ xxyun加速特性如下：
 - 解锁 Chatgpt，Tiktok
 - 高效客服响应
 - 不限制客户端
+
+---
+
+### 光年梯
+
+官网地址：[https://www02.lightyearti.cc](https://www02.lightyearti.cc/#/?code=ZWhMOU3y)
+
+邀请码：ZWhMOU3y
+- 全IPLC专线，ss协议，不限速，不限制客户端
+- 新用户注册首次下单享受7折
+
+最低 18元110g/月(月付)
+
+| 套餐 | 价格 | 流量 | 购买地址 |
+| --- | --- | --- | --- |
+| 光年梯 入门版 | ¥18/一个月 | 110GB/月 | [点击购买](https://www02.lightyearti.cc/#/order/1?period=month_price) |
+| 光年梯 晋级版 | ¥34/一个月 | 220GB/月 | [点击购买](https://www02.lightyearti.cc/#/order/2?period=month_price) |
+| 光年梯 专业版 | ¥68/一个月 | 450GB/月 | [点击购买](https://www02.lightyearti.cc/#/order/3?period=month_price) |
+| 光年梯 至尊版 | ¥130/一个月 | 900GB/月 | [点击购买](https://www02.lightyearti.cc/#/order/4?period=month_price) |
+| 独享私人专线节点 | ¥680/一个月 | 500GB/月 | [点击购买](https://www02.lightyearti.cc/#/order/5?period=month_price) |
