--- a/docs/机场推荐/01机场推荐.md
+++ b/docs/机场推荐/01机场推荐.md
@@ -91,8 +91,8 @@ permalink: /posts/vpnsum/
 
 |机场名称|地址|试用|最便宜订阅|按流量购买|
 |---|---|---|--|---|
-|[ssone](#ssone)|[[https://hello-ssone.com](https://hello-ssone.com/register?aff=QpXdVaKY)| 1天 1G |10元 60G/月|❌不支持|
-|[光年梯](#光年梯)|[[https://www02.lightyearti.cc](https://www02.lightyearti.cc/#/?code=ZWhMOU3y)| ❌不支持 |18元 110G/月|❌不支持|
+|[ssone](#ssone)|[https://hello-ssone.com](https://hello-ssone.com/register?aff=QpXdVaKY)| 1天 1G |10元 60G/月|❌不支持|
+|[光年梯](#光年梯)|[https://www02.lightyearti.cc](https://haandiiong.gntvipaff.cc/#/?code=4bY3Zbbk)| ❌不支持 |18元 110G/月|❌不支持|
 |[xxyun](#xxyun)|[https://xxyun.de](https://cloud.xxvip.shop/register?code=3AYVsSKY)| ❌不支持 |8.8元 100G/月|59.9元500G/不限时|
 |[cocoduck](#cocoduck)|[https://cocoduck.live](https://cocoduck.live/auth/register?code=ca0cfb89fa)| 1天 2G |15元 150G/月|❌不支持|
 |[99吧](#99吧)|[https://99vpn.bar](https://99vpn.bar/#/register?code=Wls9E3cC)| 1天 1G |9.9元 99G/月|29.9元111G/不限时|
@@ -201,7 +201,7 @@ xxyun加速特性如下：
 
 ### 光年梯
 
-官网地址：[https://www02.lightyearti.cc](https://www02.lightyearti.cc/#/?code=ZWhMOU3y)
+官网地址：[https://www02.lightyearti.cc](https://haandiiong.gntvipaff.cc/#/?code=4bY3Zbbk)
 
 邀请码：ZWhMOU3y
 - 全IPLC专线，ss协议，不限速，不限制客户端
