--- a/docs/vpn工具/95pc翻墙工具.md
+++ b/docs/vpn工具/95pc翻墙工具.md
@@ -1,6 +1,7 @@
 ---
 title: Clash Verge电脑客户端安装配置指南2026-Windows/Mac/Linux翻墙工具全教程（含订阅导入+TUN模式+系统代理设置）
 createTime: 2024/10/23 12:21:37
+sticky: 95
 permalink: /article/0gematwc/
 tags:
   - 科学上网
@@ -199,3 +200,5 @@ Clash Verge的核心功能需要在设置中启用。具体步骤：
 - **检查应用代理设置**：部分应用需要单独配置代理（IP:端口），通常为 127.0.0.1:7890
 - **防火墙放行**：部分企业网络可能阻止 Clash 代理流量，需要IT部门配合
 - **更新应用版本**：旧版应用可能与现代代理不兼容，尝试更新应用
+
+[👉 机场合集与更多教程](https://yp7.net/posts/vpnsum/)
